# skyline_matching

./: CMakeLists.txt  README.md  main.cpp
skyline/: CMakeLists.txt
skyline/include/detection/: make_panorama.hpp  preprocessing_base.hpp  skyline_localization.hpp  town_preprocessing.hpp
skyline/src/: CMakeLists.txt
skyline/src/detection/: make_panorama.cpp  skyline_localization.cpp  town_preprocessing.cpp
